<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>market-api-order</artifactId>
  <parent>
    <groupId>spring.app</groupId>
    <artifactId>market</artifactId>
    <version>0.1-SNAPSHOT</version>
  </parent>
  
  <properties>
    <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
    <downloadSources>true</downloadSources>
    <downloadJavadocs>true</downloadJavadocs>
    <java.version>17</java.version>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>spring.app</groupId>
      <artifactId>market-lib-api</artifactId>
    </dependency>
  </dependencies>
  
  <build>
    <defaultGoal>compile</defaultGoal>
    <directory>${basedir}/target</directory>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>